# claude-edr

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: claude-edr.toml
rules/: 01-tool-calls.yaml  02-llm-traffic.yaml  03-process-activity.yaml  04-file-activity.yaml  05-network-activity.yaml  06-mcp-activity.yaml  07-session-anomalies.yaml  default.yaml
scripts/: inject_mcp_events.py  inject_test_events.py
src/claude_edr/: __init__.py
src/claude_edr/backend/: __init__.py  __main__.py  cli.py  config.py  daemon.py
src/claude_edr/backend/api/: server.py
src/claude_edr/backend/detection/: engine.py
src/claude_edr/backend/models/: events.py
src/claude_edr/backend/pipeline/: enrichment.py  router.py
src/claude_edr/backend/registry/: agent_registry.py
src/claude_edr/backend/response/: actions.py
src/claude_edr/backend/storage/: schema.sql  sqlite_store.py
src/claude_edr/dashboard/: server.py
src/claude_edr/dashboard/templates/: agent_detail.html  agents.html  alerts.html  base.html  endpoint_detail.html  endpoints.html  fleet.html  forensics.html  hook_detail.html  llm_traffic.html  mcp_detail.html  rule_detail.html  rules_list.html  session_detail.html  skill_detail.html  timeline.html
src/claude_edr/sensor/: main.py  transport.py
src/claude_edr/sensor/inventory/: agent_inventory.py  endpoint.py
src/claude_edr/sensor/models/: events.py
src/claude_edr/sensor/sensors/: base.py  ebpf_sensor.py  hook_sensor.py  mcp_scanner.py  process_sensor.py
tests/malicious-mcp/: README.md  pyproject.toml  server.py
(+6 files in other folders)
