[project]
name = "claude-edr"
version = "0.1.0"
description = "Endpoint Detection and Response for AI Coding Agents - monitors Claude Code, Cursor, Windsurf, Codex, and other AI tools"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "websockets>=13.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "rich>=13.0.0",
    # Sensor
    "psutil>=6.0.0",
    "inotify-simple>=1.3.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
claude-edr = "claude_edr.backend.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_edr"]

[tool.ruff]
target-version = "py312"
line-length = 120
